tests/baselines/reference/duplicateStringIndexers.errors.txt
tests/cases/conformance/types/members/duplicateStringIndexers.ts(6,9): error TS2374: Duplicate string index signature.
tests/cases/conformance/types/members/duplicateStringIndexers.ts(11,9): error TS2374: Duplicate string index signature.
tests/cases/conformance/types/members/duplicateStringIndexers.ts(16,9): error TS2374: Duplicate string index signature.
tests/cases/conformance/types/members/duplicateStringIndexers.ts(21,9): error TS2374: Duplicate string index signature.
tests/cases/conformance/types/members/duplicateStringIndexers.ts(26,9): error TS2374: Duplicate string index signature.
tests/cases/conformance/types/members/duplicateStringIndexers.ts(31,9): error TS2374: Duplicate string index signature.


==== tests/cases/conformance/types/members/duplicateStringIndexers.ts (6 errors) ====
    // it is an error to have duplicate index signatures of the same kind in a type
    
    module test {
        interface Number {
            [x: string]: string;
            [x: string]: string;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate string index signature.
        }
    
        interface String {
            [x: string]: string;
            [x: string]: string;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate string index signature.
        }
    
        interface Array<T> {
            [x: string]: T;
            [x: string]: T;
            ~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate string index signature.
        }
    
        class C {
            [x: string]: string;
            [x: string]: string;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate string index signature.
        }
    
        interface I {
            [x: string]: string;
            [x: string]: string;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate string index signature.
        }
    
        var a: {
            [x: string]: string;
            [x: string]: string;
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate string index signature.
        }
    }
    